# sam-clip-rag

./: README.md  app.py  pyproject.toml  requirements.txt
core/: singing_synth.py
src/bamboo_recognition/: __init__.py
src/bamboo_recognition/api/: __init__.py  app.py
src/bamboo_recognition/config/: __init__.py  settings.py
src/bamboo_recognition/models/: __init__.py  embedding.py  segmentation.py
src/bamboo_recognition/pipeline/: __init__.py  predictor.py
src/bamboo_recognition/retrieval/: __init__.py  fusion.py  similarity.py
src/bamboo_recognition/storage/: __init__.py  milvus_store.py
src/bamboo_recognition/utils/: __init__.py  ingest.py
tests/: test_fusion.py  test_similarity.py  test_singing_synth.py
